seemed to have fixed overflow shenanigans of central view window for now

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,24 +26,6 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-/* Firefox */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--secondary) var(--primary);
-}
-
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 15px;
-}
-
-*::-webkit-scrollbar-track {
-  background: var(--primary);
-  border-radius: 5px;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: var(--secondary);
-  border-radius: 14px;
-  border: 3px solid var(--primary);
-}
+/* .ds-window-max-h {
+  max-height: calc(100vh - 70px);
+} */
